<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_update_fund"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_btn_update"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btn_update_fund"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_delete_fund"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_btn_delete"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btn_delete_fund"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#FFFFFF"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/list_item_share"
                android:textColor="#8a8a8a"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_income_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_item_income_value"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_income_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#8a8a8a"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_net_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/list_item_net_value"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="#55000000" />

</LinearLayout>