<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_header"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="#55000000"
    android:gravity="center"
    android:padding="10dp" >

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:indeterminate="false" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_income_label"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_update_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/label_update_time"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/ll_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_income_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_income_value"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_income_value_unit"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:id="@+id/tv_total_income_unit" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>

</RelativeLayout>