<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/panel"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/panel_sub"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_value"
                    android:textColor="@color/val_zero"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_date"
                    android:textColor="#22000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/panel_sub"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_range_grow_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_value"
                    android:textColor="@color/val_zero"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_label_range_grow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_range_grow"
                    android:textColor="#22000000"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/panel_sub"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_net_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_value"
                    android:textColor="@color/val_zero"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_netValue"
                    android:textColor="#22000000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/panel_sub"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv_grow_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_value"
                    android:textColor="@color/val_zero"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/label_grow"
                    android:textColor="#22000000"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_month"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_check"
            android:gravity="center"
            android:text="@string/btn_month"
            android:textColor="@drawable/selector_color_check" />

        <TextView
            android:id="@+id/btn_season"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_check"
            android:gravity="center"
            android:text="@string/btn_season"
            android:textColor="@drawable/selector_color_check" />

        <TextView
            android:id="@+id/btn_half"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_check"
            android:gravity="center"
            android:text="@string/btn_half"
            android:textColor="@drawable/selector_color_check" />

        <TextView
            android:id="@+id/btn_year"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_check"
            android:gravity="center"
            android:text="@string/btn_year"
            android:textColor="@drawable/selector_color_check" />
    </LinearLayout>

</LinearLayout>